Fixed navbar to top so it follows if you have to scroll. Added a new button that displays a form you can enter a new key/value to the namespace. Fixed pageWrapper height if list gets too long. Removed metadata and cancel button as they are pointless.

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -38,7 +38,7 @@ a {
      text-align: center;
      max-width: 1080px;
      background-color: white;
-     height: 100%
+     min-height: 100%
      
 }
 
@@ -68,4 +68,8 @@ a {
   .navbar-toggler {
       float: right;
   }
+}
+
+body {
+    padding-top: 70px;
 }
